// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider styled components StyledInnerThumb StyledInnerThumb: StyledInnerThumb has correct styles 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono600",
  "borderRadius": "2px",
  "height": "8px",
  "width": "2px",
}
`;

exports[`Slider styled components StyledInnerTrack StyledInnerTrack: StyledInnerTrack has correct styles 1`] = `
Object {
  "alignSelf": "center",
  "background": "linear-gradient(to right, $theme.colors.primary 0%, $theme.colors.primary NaN%, $theme.colors.mono400 NaN%, $theme.colors.mono400 100%)",
  "borderRadius": "$theme.borders.radius100",
  "cursor": "inherit",
  "height": "$theme.sizing.scale100",
  "width": "100%",
}
`;

exports[`Slider styled components StyledRoot StyledRoot: StyledRoot has correct styles 1`] = `Object {}`;

exports[`Slider styled components StyledThumb StyledThumb left: StyledThumb left range has correct styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono100",
  "borderBottomLeftRadius": "4px",
  "borderBottomRightRadius": "1px",
  "borderColor": "$theme.colors.mono400",
  "borderStyle": "solid",
  "borderTopLeftRadius": "4px",
  "borderTopRightRadius": "1px",
  "borderWidth": "1px",
  "boxShadow": "0px 1px 4px rgba(0, 0, 0, 0.12)",
  "cursor": "inherit",
  "display": "flex",
  "height": "24px",
  "justifyContent": "center",
  "width": "12px",
}
`;

exports[`Slider styled components StyledThumb StyledThumb right: StyledThumb right range has correct styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono100",
  "borderBottomLeftRadius": "1px",
  "borderBottomRightRadius": "4px",
  "borderColor": "$theme.colors.mono400",
  "borderStyle": "solid",
  "borderTopLeftRadius": "1px",
  "borderTopRightRadius": "4px",
  "borderWidth": "1px",
  "boxShadow": "0px 1px 4px rgba(0, 0, 0, 0.12)",
  "cursor": "inherit",
  "display": "flex",
  "height": "24px",
  "justifyContent": "center",
  "width": "12px",
}
`;

exports[`Slider styled components StyledThumb StyledThumb: StyledThumb has correct styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono100",
  "borderBottomLeftRadius": "4px",
  "borderBottomRightRadius": "4px",
  "borderColor": "$theme.colors.mono400",
  "borderStyle": "solid",
  "borderTopLeftRadius": "4px",
  "borderTopRightRadius": "4px",
  "borderWidth": "1px",
  "boxShadow": "0px 1px 4px rgba(0, 0, 0, 0.12)",
  "cursor": "inherit",
  "display": "flex",
  "height": "24px",
  "justifyContent": "center",
  "width": "24px",
}
`;

exports[`Slider styled components StyledTick StyledTick: StyledTick has correct styles 1`] = `
Object {
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
}
`;

exports[`Slider styled components StyledTickBar StyledTickBar: StyledTickBar has correct styles 1`] = `
Object {
  "alignItems": "center",
  "display": "flex",
  "justifyContent": "space-between",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
}
`;

exports[`Slider styled components StyledTrack StyledTrack: StyledTrack has correct styles 1`] = `
Object {
  "cursor": "inherit",
  "display": "flex",
  "paddingBottom": "$theme.sizing.scale600",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale1000",
}
`;
